tests/errors/stray_dot.out
cli:1:3: error: Unexpected token when parsing s-expression
( . )
  ^
1 error generated.
